source/_assets/sass/_base.scss
@mixin neon-glow {
  color: #fff !important;
  text-shadow: 0 0 0.033em #fff, 0 0 0.08em #fff, 0 0 0.1em #7a27ff,
    0 0 0.2em #7a27ff, 0 0 0.3em #7a27ff, 0 0 1em #7a27ff, 0 0 1.5em #7a27ff;
}

@keyframes flicker {
  0%,
  19.999%,
  22%,
  62.999%,
  64%,
  64.999%,
  72%,
  100% {
    opacity: 1;
  }
  20%,
  21.999%,
  63%,
  63.999%,
  65%,
  71.999% {
    opacity: 0.33;
  }
}

body {
  font-size: 17px;
}

a {
  @apply .font-semibold;
  @apply .no-underline;
  @apply .text-white;

  &:hover {
    @apply .text-theme-primary;
    @include neon-glow;
  }
}

blockquote {
  @apply .border-blue-400;
  @apply .border-l-4;
  @apply .font-normal;
  @apply .italic;
  @apply .my-8;
  @apply .pl-6;
  @apply .text-white;
  @apply .text-lg;
}

code {
  @apply .bg-theme-primary;
  @apply .px-2;
  @apply .py-px;
  @apply .rounded;
  @apply .text-sm;
}

code.hljs {
  @apply .bg-dark-600;
  @apply .p-2;

  .hljs-comment,
  .hljs-keyword,
  .hljs-meta {
    @apply .font-normal;
    @apply .not-italic;
  }
}

h1,
h2,
h3,
h4,
h5,
h6 {
  @apply .leading-tight;
  @apply .mb-4;
  @apply .mt-8;
  @apply .text-white;

  &:first-child {
    @apply .mt-0;
  }
}

h1 {
  @apply .font-extrabold;
  @apply .text-5xl;
}

.post-title {
  @include neon-glow;
  
  animation: flicker 3s linear forwards alternate infinite;
  
  &:nth-child(even) {
    animation-delay: 0.3s !important;
    animation-direction: alternate-reverse !important;
  }
}
h2 {
  @apply .font-bold;
  @apply .text-4xl;
}

h3 {
  @apply .font-bold;
  @apply .text-3xl;
}

h4 {
  @apply .font-normal;
  @apply .text-2xl;
}

h5 {
  @apply .font-normal;
  @apply .text-xl;
}

h6 {
  @apply .font-light;
  @apply .text-lg;
}

hr {
  @apply .border-b;
  @apply .border-blue-200;
  @apply .my-12;
  @apply .rounded-full;
}

li {
  ul,
  ol {
    @apply .my-0;
  }
}

ol,
ul {
  @apply .my-4;
}

ol {
  @apply .list-decimal;
}

ul {
  @apply .list-disc;
}

p {
  @apply .my-3;

  @screen md {
    @apply .my-6;
  }
}

pre {
  @apply .bg-dark-400;
  @apply .leading-loose;
  @apply .my-6;
  @apply .overflow-x-auto;
  @apply .p-2;
  @apply .rounded;
  @apply .shadow;
  @apply .text-base;

  code {
    @apply .bg-transparent;
    @apply .block;
    @apply .p-2;
  }
}

::selection {
  @apply .bg-blue-500;
  @apply .text-white;
}

@media (prefers-reduced-motion: reduce) {
  * {
    animation-duration: 0s !important;
    transition-duration: 0s !important;
  }
}

